# agentic-researchops-platform

./: README.md  main.py  pyproject.toml  reaserch_creater.drawio
api/: controller.py
guardrails/: prompts.py  validate_research_topic.py
models/: rearch_deatils.py  research_deatils.py
repos/: db_service.py
service/: research_service.py
ui/: research_details_gradio.py
