[project]
name = "agentic-researchops-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "gradio>=6.19.0",
    "langchain-chroma>=1.1.0",
    "openai-agents>=0.2.0",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
